# bookmarks

./: .env.example  README.md  github_handler.py  main.py  pocket_handler.py  pyproject.toml  requirements.txt
